pk: Properly resolve package ids after a transactions is done

The Transaction gets us the old package ids which aren't useful to us.

BUG: 443615


(cherry picked from commit 8eda40a097c088323523d474d1bafd301def8999)